--- a/build.gradle
+++ b/build.gradle
@@ -16,6 +16,13 @@ repositories {
 }
 
 dependencies {
+
+	compileOnly 'org.projectlombok:lombok:1.18.26'
+	annotationProcessor 'org.projectlombok:lombok:1.18.26'
+
+	implementation 'org.springframework.boot:spring-boot-starter-data-jpa:3.0.2'
+	implementation 'mysql:mysql-connector-java:8.0.32'
+
 	implementation 'org.springframework.boot:spring-boot-starter-thymeleaf'
 	implementation 'org.springframework.boot:spring-boot-starter-web'
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
